# LLM_VJ

./: 01_LLM_Call.ipynb  02_Messages.ipynb  03_Structured_Output.ipynb  04_Chains_Runnables.ipynb  05_Chains_CustomRunnables.ipynb  06_Chains_Parallel.ipynb  07_Chains_Conditional.ipynb  08_RAG_Data_Loader.ipynb  09_RAG_Components.ipynb  10_Memory_Management.ipynb  LLM_Call.ipynb  pyproject.toml
data/: vj.txt
