[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "python-dotenv>=1.2.2",
    "langchain-google-genai>=4.2.2",
    "pypdf>=6.10.2",
    "langchain-chroma>=1.1.0",
    "chromadb>=1.5.8",
    "grpcio>=1.80.0",
    "faiss-cpu>=1.13.2",
    "tiktoken>=0.12.0",
]
